--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,7 +58,7 @@ h1{
 	font-family: "tabarra";
 	margin-top: 10px;
 	color: #111C93;
-	font-weight: bold;
+	font-weight: normal;
 	letter-spacing: 5px;
 }
 
@@ -155,6 +155,15 @@ p.plettrine{ /*paragraphe de la présentation*/
 	margin-right:10px;
 	height:50px;
 	width: auto;
+	filter: grayscale(1);
+	-webkit-filter: grayscale(1);
+	-webkit-transition: all 0.3s ease;
+  	transition: all 0.3s ease;
+}
+
+.rs:hover {
+	filter: grayscale(0);
+	-webkit-filter: grayscale(0);
 }
 
 /*Mes compétences*/
@@ -189,17 +198,15 @@ button{
 	margin-bottom: 15px;
 	color: #fff;
 	font-weight: bold;
-	background: #C15CD5;
+	background-color: #1A65D2;
 	border-radius: 5px;
+	-webkit-transition: all 0.3s ease;
+  	transition: all 0.4s ease;
+  	
 }
 
 button:hover{
-	background: #09087C;
-	color: #fff;
-}
-
-button:active{
-	background: #09087C;
+	background: #09319C;
 	color: #fff;
 }
 
@@ -216,7 +223,7 @@ div.row[id^="p"]{
 	padding: 15px;
 	height: auto;
 	width: 100%;
-	background-color: white;
+	background-color: #F6F6F6;
 	text-align: center;
 }
 
@@ -224,6 +231,7 @@ div.row[id^="p"]{
 	height:auto;
 	width:100%;
 	align-self: center;
+	border: 1px solid #dadada;
 }
 
 .card-title{ /*nom du projet*/
@@ -237,33 +245,55 @@ div.row[id^="p"]{
 
 /*Fenetres modales*/
 h2{
+	color: #111C93;
 	margin-top: 20px;
 	margin-bottom: 20px;
 }
+
+.modal-header{
+	background-image: url(../img/fond/fond.png);
+	background-size: 100%;
+	background-position: 0% 100%;
+	height: 80px;
+	border: none;
+}
+
+.modal-title{
+	display: none;
+}
+
 .modal-footer{
 	margin-top: 20px;
+	background-color: #F6F6F6;
+}
+
+.image{ /*image fenetre modale*/
+	border: 1px solid #dadada;
 }
 
 .card-body button  {
-	background-color: #E5E5E5;
-	color: grey;
+	background-color: #1A65D2;
+	color: #fff;
 	font-weight: bold;
+	letter-spacing: 1px;
 }
 
 .card-body button:hover{
-	background-color: #CBCBCD;
-	color: #64626C;
+	background-color: #09319C;
+	color: #fff;
 }
 
 /*footer*/
 
 footer{
 	text-align: center;
-	padding-bottom: 80px;
 	padding-top: 30px;
-	background-image: url(../img/fond/footer.png);
-	background-size: cover;
-	background-position: center;
+}
+
+
+.imageFooter{
+	width: 100%;
+	height: auto;
 }
 
 footer hr{
@@ -303,6 +333,12 @@ footer hr{
 @media (max-width: 1030px){
 	.portefolio{ /*section portefolio et bienvenue*/
 		margin-top: -35%;
+	}
+}
+
+@media (max-width: 870px){
+	footer hr{
+	display: none;
 	}
 }
 
